--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,3 +6,16 @@
 body{
     @apply bg-neutral-900
 }
+
+.custom-scrollbar::-webkit-scrollbar {
+    width: 8px;
+  }
+  
+  .custom-scrollbar::-webkit-scrollbar-track {
+    background: #f0f0f0;
+  }
+  
+  .custom-scrollbar::-webkit-scrollbar-thumb {
+    background-color: #076ec2;
+    border-radius: 10px;
+  }
